# python-template

./: README.md  cookiecutter.json
{{cookiecutter.project}}/: pyproject.toml
{{cookiecutter.project}}/src/tests/: test_works.py
